# nlp

./: .gitignore  01_pytorch_fundamentals.ipynb  02_sequence_processing.ipynb  03_attention_transformers.ipynb  04_language_models.ipynb  05_text_analysis.ipynb  06_nlp_applications.ipynb  PyTorch_On_Ramp.ipynb  README.md  advanced_pipeline_with_custom_features.html  complete_example_pipeline.html  create_tfidf.html  generate_wordcloud.html  index.html  pyproject.toml  requirements.txt  style.css  visualization_with_seaborn.html
.github/workflows/: nlp.yml
Codes/: README.md  extracting_named_entities.py  file.txt  gensim_text_processing.py  main.py  py-onramp.py  pyproject.toml  text_processing.py  text_visualization.py
Docker/: Dockerfile  compose.yml  docker-compose.yml
Jupyter/: 01_pytorch_fundamentals.ipynb  05_text_analysis.ipynb  README.md  attention_transformers.ipynb  pytorch_fundamentals.ipynb  sequence_processing.ipynb
Labs/: Biblio.bib  Class.typ  How-To.typ  Lab-1.typ  Lab-2.typ  Lab-3.typ  Lab-4.typ  Makefile  Preamble.typ  Timeline.typ  sample.txt
Marimo/: extracting_named_entities.py  gensim_text_processing.py  py-onramp.py  text_processing.py  text_visualization.py
Marimo/gensim_text_processing/: building_a_complete_text_analysis_pipeline.py  computing_similarity_between_documents.py  creating_a_document_corpus.py  tfidf_with_gensim.py
Marimo/named_entity_recognition/: advanced_spacy_ner.py  basic_ner_with_spacy.py  entity_validation.py  export2html.sh  extracting_named_entities.py  performance_evaluation.py  text_preprocessing_for_ner.py
Marimo/text_processing_and_visualization/: advanced_pipeline_with_custom_features.py  complete_example_pipeline.py  create_bow.py  create_tfidf.py  generate_wordcloud.py  plot_word_frequency.py  text_preprocessor.py  visualization_with_seaborn.py
gensim_text_processing/: building_a_complete_text_analysis_pipeline.py  computing_similarity_between_documents.html  computing_similarity_between_documents.py  creating_a_document_corpus.py  tfidf_with_gensim.html  tfidf_with_gensim.py
named_entity_recognition/: advanced_spacy_ner.html  advanced_spacy_ner.py  basic_ner_with_nltk.html  basic_ner_with_spacy.html  basic_ner_with_spacy.py  custom_ner_training.html  entity_validation.html  entity_validation.py  extracting_named_entities.html  extracting_named_entities.py  performance_evaluation.html  performance_evaluation.py  text_preprocessing_for_ner.py
ner/: basic_ner_with_spacy.py  entity_validation.py  extracting_named_entities.py
src/: extracting_named_entities.html  gensim_text_processing.html  py-onramp.html  text_processing.html  text_visualization.html
src/gensim_text_processing/: building_a_complete_text_analysis_pipeline.html  computing_similarity_between_documents.html  creating_a_document_corpus.html  tfidf_with_gensim.html
src/named_entity_recognition/: advanced_spacy_ner.html  basic_ner_with_nltk.html  basic_ner_with_spacy.html  custom_ner_training.html  entity_validation.html  extracting_named_entities.html  performance_evaluation.html  text_preprocessing_for_ner.html
src/text_processing_and_visualization/: advanced_pipeline_with_custom_features.html  complete_example_pipeline.html  create_bow.html  create_tfidf.html  generate_wordcloud.html  plot_word_frequency.html  text_preprocessor.html  visualization_with_seaborn.html
text_processing/: advanced_pipeline_with_custom_features.py  complete_example_pipeline.py  create_tfidf.py  generate_wordcloud.py  visualization_with_seaborn.py
text_processing_and_visualization/: advanced_pipeline_with_custom_features.py  complete_example_pipeline.html  complete_example_pipeline.py  create_bow.html  create_bow.py  create_tfidf.html  create_tfidf.py  generate_wordcloud.py  plot_word_frequency.html  plot_word_frequency.py  text_preprocessor.html  text_preprocessor.py  visualization_with_seaborn.py
(+13 files in other folders)
