[project]
name = "nlp"
version = "0.1.0"
description = "NLP Unraveled"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "ipython>=8.35.0",
    "marimo==0.10.4",
    "matplotlib>=3.10.1",
    "morfessor>=2.0.6",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polyglot>=16.7.4",
    "pycld2>=0.42",
    "pyicu>=2.15",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "wordcloud>=1.9.4",
]
