[project]
name = "nlp"
version = "0.1.0"
description = "NLP Unraveled"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "asttokens>=3.0.0",
    "blis>=1.2.1",
    "catalogue>=2.0.10",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "cloudpathlib>=0.21.0",
    "confection>=0.1.5",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "cymem>=2.0.11",
    "decorator>=5.2.1",
    "docutils>=0.21.2",
    "en-core-web-sm",
    "exceptiongroup>=1.2.2",
    "executing>=2.2.0",
    "fonttools>=4.57.0",
    "gensim>=4.4.0",
    "h11>=0.14.0",
    "idna>=3.10",
    "ipython>=8.35.0",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.8",
    "langcodes>=3.5.0",
    "language-data>=1.3.0",
    "marimo>=0.10.4",
    "marisa-trie>=1.2.1",
    "markdown>=3.8",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "morfessor>=2.0.6",
    "murmurhash>=1.0.12",
    "narwhals>=1.34.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pillow>=11.2.1",
    "pip>=25.0.1",
    "polyglot>=16.7.4",
    "preshed>=3.0.9",
    "prompt-toolkit>=3.0.50",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pycld2>=0.42",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pygments>=2.19.1",
    "pyicu>=2.15",
    "pymdown-extensions>=10.14.3",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smart-open>=7.1.0",
    "sniffio>=1.3.1",
    "spacy>=3.8.5",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "srsly>=2.5.1",
    "stack-data>=0.6.3",
    "starlette>=0.46.2",
    "thinc>=8.3.4",
    "threadpoolctl>=3.6.0",
    "tomlkit>=0.13.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typer>=0.15.2",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.1",
    "wasabi>=1.1.3",
    "wcwidth>=0.2.13",
    "weasel>=0.4.1",
    "websockets>=15.0.1",
    "wordcloud>=1.9.4",
    "wrapt>=1.17.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
